<?xml version="1.0"?>
<package format="2">
  <name>object_detection_tensorflow</name>
  <version>0.0.1</version>
  <description>The object_detection_tensorflow package</description>
  <maintainer email="karolmajek@gmail.com">Karol Majek</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>object_detection_tensorflow_msgs</build_depend>
  <exec_depend>object_detection_tensorflow_msgs</exec_depend>

  <build_depend>opencv2</build_depend>
  <exec_depend>opencv2</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
